--- a/.htaccess
+++ b/.htaccess
@@ -3,5 +3,5 @@
 
   # Check for static file extensions and redirect all requests
   RewriteCond %{REQUEST_URI} !\.(js|less|css|jpg|png|gif|html)$
-  RewriteRule ^.*$ index.php [L]
+  RewriteRule ^.*$ public/index.php [L]
 </IfModule>
